--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "crypto-js": "^4.0.0",
+    "crypto-random-string": "^3.3.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "humps": "^2.0.1",
